--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: EPBplantation
-Title: A set of functions to work with white spruce plantation in Quebec.
+Title: A set of functions to work with white spruce plantation in Quebec
 Version: 0.1
 Authors@R: 
     person(given = "Catherine",
@@ -10,6 +10,7 @@ Authors@R:
 Description: This package may be used to create a diameter frequency distribution based on  plantation attributes, model tree height and volume, and model the lumber product assortment that can be derived of the plantation.
 License: use_mit_license()
 Encoding: UTF-8
+Imports: dplyr, stats
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
