--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(dhp.dist)
 export(height.epb)
 export(statSAW.plantation)
 export(statSAW.value)
-export(weibull.param.pct)
+export(weibull.params.pct)
+importFrom(dplyr,"%>%")
